--- a/index.html
+++ b/index.html
@@ -6,16 +6,51 @@
 	 <script src="https://cdn.tailwindcss.com"></script>
 	<title>test Tailwindcss</title>
 </head>
-<body  class="bg-no-repeat bg-fixed bg-cover" style="background-image: url('https://i.imgur.com/6bv85zs.jpg');">
+<body  class="bg-gray-800">
+
+<nav class="bg-white px-2 sm:px-4 py-2.5 shadow shadow-sm shadow-md dark:bg-white">
+    <div class="container flex flex-wrap justify-between items-center mx-auto">
+      <a href="/" class="flex items-center">
+        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"><img src="/images/icon-flat.png" width="70px" alt=""></span>
+      </a>
+      <div class="flex md:order-2">
+          <button type="button" class="text-white bg-yellow-300 hover:bg-yellow-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 text-black">
+            <a href="https://erickuu.github.io/" target="_blank" class="w-full h-full text-black">Erickuu Autor</a></button>
+      </div>
+      <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="mobile-menu-4">
+        <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+          <li>
+            <a href="/" class="block py-2 pr-4 pl-3 rounded text-yellow-500 md:p-0  hover:text-gray-500" aria-current="page">Inicio</a>
+          </li>
+          <li>
+            <a href="https://FandomAnimes.blogspot.com" target="_blank" class="block py-2 pr-4 pl-3 text-yellow-500  md:border-0  md:p-0 hover:text-gray-500">Blog</a>
+          </li>
+          <li>
+            <a href="https://github.com/erickuu/" target="_blank" class="block py-2 pr-4 pl-3 text-yellow-500 md:p-0 hover:text-gray-500 ">Github and Project</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
 	<main>
-		<section class="flex flex-row ">
-			<div class="text-center w-2/5 mt-28 h-auto bg-white rounded p-4  font-sans">
-				<h1 class="text-3xl">Nos perdimos Baka 😤💛 </h1>
-				<p class="text-center"><strong>Error 404</strong></p>
-				<p>Esta pagina no existe, porfavor regrese ...</p>
-				<button class="text-center p-4 m-auto bg-yellow-400 hover:bg-yellow-700">Inicio</button>
-			</div>
-		</section>
+    <section class="w-full h-screen grid grid-cols-2 text-lg ">
+      <div class="w-full h-full bg-white flex	flex-col justify-center  items-center p-8 text-left ">
+        <h2 class="text-center text-3xl mb-4 mt-20 "><strong>Contactanos</strong></h2>
+        <p>Contactanos a traves de las siguientes redes sociales y cuentanos, ¿que novelas ligeras te gustaria ver en la plataforma?. Y recuerda : "Lo unico imposible es lo que no intestas"</p>
+    		<p><strong>Author : +573148121439</strong></p>
+    		<p>
+     			<img src="public/images/hidden-flat.png" width="160px" class="" alt="">
+    		</p>
+      </div>
+      <div class="w-full bg-yellow-300  flex	flex-col justify-center items-center  p-8 h-full">
+        <h2 class="text-center text-3xl mb-4"><strong>Redes Sociales</strong></h2>
+        <p><strong>Instagram</strong>:@fandomanimes1</p>
+        <p><strong>Blogspot</strong> :fandomanimes.blogspot.com</p>
+        <p><strong>Wordpress</strong>:fandomanimes.wordpress.com</p>
+        <p><strong>Email</strong>    :erickgraterolbarico@gmail.com </p>
+      </div>
+  	</section>
 	</main>
 </body>
 </html>
