--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 	<title>test Tailwindcss</title>
 </head>
 <body  class="bg-gray-800">
-
+<style>
+  .button{
+    width: 160px;
+    margin-left: 550px;
+  }
+</style>
 <nav class="bg-white px-2 sm:px-4 py-2.5 shadow shadow-sm shadow-md dark:bg-white">
     <div class="container flex flex-wrap justify-between items-center mx-auto">
       <a href="/" class="flex items-center">
@@ -34,13 +39,19 @@
 
 	<main>
     <section class="w-full h-screen grid grid-cols-2 text-lg ">
-      <div class="w-full h-full bg-white flex	flex-col justify-center  items-center p-8 text-left ">
+      <div class="w-full h-full bg-white flex	flex-col justify-center items-center p-8 text-left ">
         <h2 class="text-center text-3xl mb-4 mt-20 "><strong>Contactanos</strong></h2>
         <p>Contactanos a traves de las siguientes redes sociales y cuentanos, ¿que novelas ligeras te gustaria ver en la plataforma?. Y recuerda : "Lo unico imposible es lo que no intestas"</p>
     		<p><strong>Author : +573148121439</strong></p>
     		<p>
      			<img src="public/images/hidden-flat.png" width="160px" class="" alt="">
     		</p>
+        <div class="button ">
+          <button type="button" class="bg-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 text-black">
+            <a href="https://erickuu.github.io/" target="_blank" class="w-full h-full text-black">Descargar Novelas
+            </a>
+          </button>
+        </div>
       </div>
       <div class="w-full bg-yellow-300  flex	flex-col justify-center items-center  p-8 h-full">
         <h2 class="text-center text-3xl mb-4"><strong>Redes Sociales</strong></h2>
